# final-project-mta

./: README.md
project/: main.py  mta_algorithms.py  mta_conversion.py  pyproject.toml
project/data/: data_for_mvp.csv  final_final_mmm.csv  names_sources.txt
project/notebooks/: journeys_data_analysis.ipynb
project/utils/: attribution.py  data.py  etl.py  model.py  plots.py
